# server/svc/port.go
@@ -9,15 +9,15 @@ type Service interface {
 	Error(ctx context.Context, internalCode string, description string) *ErrorResponse
 	Response(ctx context.Context, description string, data interface{}) *ResponseData
 
-	FindAdminByID(userID string) (*Admin, error)
-	CreateAdmin(std *Admin) error
-	FindAdminByUsername(username string) (*Admin, error)
+	FindUserByID(userID string) (*User, error)
+	CreateUser(std *User) error
+	FindUserByUsername(username string) (*User, error)
 }
 
-type AdminRepo interface {
-	Create(std *Admin) error
-	Find(username string) (*Admin, error)
-	FindByID(userID string) (*Admin, error) // Add this line
+type UserRepo interface {
+	Create(std *User) error
+	Find(username string) (*User, error)
+	FindByID(userID string) (*User, error) // Add this line
 }
 
 type DashboardRepo interface {
